Добавил, чтобы строки были в выводе